# reditor

./: .gitignore  Cargo.toml  README.md
src/: editor.rs  enums.rs  main.rs  tab.rs  utility.rs
