[package]
name = "rust-text-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.27.2"}
eframe = { version = "0.27.2" }
encoding_rs = { version = "0.8.33" }
egui_dock = { version = "0.12.0"}
once_cell = { version = "1.19.0" }
rfd = { version = "0.14.0" }
chardet = { version = "0.2.4" }
egui_extras = { version = "0.27.2", features = ["image", "svg"]}
rand = { version = "0.8.5"}
